# cp-zkp

./: .dockerignore  Cargo.toml  LICENSE  README.md  build.rs  crates.js  docker-compose.yml  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml  doc.yml  test.yml
auth_client/: all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
auth_client/auth_client/: constant.STRUCT_NAME.html  fn.ScalarWrapper.html  index.html  sidebar-items.js  struct.AuthenticationAnswerRequest.html  struct.AuthenticationAnswerResponse.html  struct.AuthenticationChallengeRequest.html  struct.AuthenticationChallengeResponse.html  struct.AuthenticationParametersResponse.html  struct.RegisterRequest.html  struct.RegisterResponse.html
auth_lib/: all.html  fn.bootstrap_client.html  fn.bootstrap_server.html  index.html  sidebar-items.js  struct.Config.html
auth_server/: all.html  fn.main.html  index.html
docker/client/: Dockerfile
docker/server/: Dockerfile
docs/: architecture.graphml
dummy/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Map.html  struct.UseCase.html  trait.DA.html
implementors/dummy/: trait.DA.js
implementors/tower_service/: trait.Service.js
proto/: auth.proto
src/: client.rs  data_access.rs  main.rs  server.rs
src/auth_client/: client.rs.html
src/auth_lib/: chaum_pedersen.rs.html  data_access.rs.html  grpc.rs.html  lib.rs.html  logic.rs.html
src/auth_server/: server.rs.html
src/chaum_pedersen/: algorithm.rs
src/lib/: grpc.rs  (+3 more)
tests/: server_tests.rs
(+53 files in other folders)
