[package]
name = "chaum-pedersen-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.3", features = ["rand"] }
num-primes = "0.3.0"
num-traits = "0.2.15"
rand = "0.8"
rustc-hash = "1.1.0"
