[package]
name = "chaum-pedersen-test"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the auth gRPC server
name = "auth-server"
path = "src/server.rs"

[[bin]] # Bin to run the auth gRPC client
name = "auth-client"
path = "src/client.rs"

[lib]
name = "auth_lib"
path = "src/lib/lib.rs"

[dependencies]
num-bigint = { version = "0.4.3", features = ["rand"] }
num-primes = "0.3.0"
num-traits = "0.2.15"
rand = "0.8"
rustc-hash = "1.1.0"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
once_cell = "1.18.0"

[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.9"
